--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 
 metatrader-connector/client_secrets.json
 metatrader-connector/config.txt
+metatrader-connector/__pycache__/
 *.png
 *.json
 *.pyc
-__py_chache__/*
+
