--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "react-sliding-pane": "^7.3.0",
+    "react-tabs": "^6.0.2",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
