--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.47.0",
     "bootstrap": "^5.3.1",
+    "chart.js": "^4.4.2",
+    "chartjs-chart-financial": "github:chartjs/chartjs-chart-financial",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-sliding-pane": "^7.3.0",
