--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=80 && react-scripts start --no-browser",
+    "start": "set PORT=80 && set BROWSER=none && react-scripts start --no-browser",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
