improves mt starting configuration

--- a/config/start.ini
+++ b/config/start.ini
@@ -1,3 +1,11 @@
+;https://www.metatrader5.com/en/terminal/help/start_advanced/start
+[Experts]
+Account=0
+Proile=0
+AllowLiveTrading=1
+AllowDllImport=1
+Enabled=1
+
 [StartUp]
 ; experts settings
 ExpertsEnable=true
@@ -5,6 +13,6 @@ ExpertsDllImport=true
 ExpertsExpImport=true
 ExpertsTrades=true
 ; open chart and run expert and/or script
-; Symbol=EURUSD
+Symbol=EURUSD
 Period=H1
 Expert=Server.ex5
