--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
 		"date": "2024-01-01 10:10:10"
 	},
 	"local": {
-		"dir": "../frontend/public/trades"
+		"dir": "../trades"
 	},
 	"metatrader": {
 		"dir": "start.ini",
