--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.2",
     "chartjs-chart-financial": "github:chartjs/chartjs-chart-financial",
+    "lightweight-charts": "^4.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
