--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,9 +1,8 @@
 {
-    "compilerOptions": {
-      "baseUrl": "src",
-      "paths": {
-        "*": ["src/*"]
-      }
-    },
-    "include": ["src"]
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "src/*": ["./src/*"],
+    }
   }
+}
