--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -11,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "apexcharts": "^3.47.0",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.2",
@@ -21,17 +21,20 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-scripts": "^5.0.1",
     "react-sliding-pane": "^7.3.0",
     "react-tabs": "^6.0.2",
     "styled-components": "^5.3.11",
+    "vite": "^5.4.9",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=80 && set BROWSER=none && react-scripts start --no-browser",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@welldone-software/why-did-you-render": "^8.0.1"
+    "@vitest/coverage-v8": "^2.1.3",
+    "@welldone-software/why-did-you-render": "^8.0.1",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.3"
   }
 }
