--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^2.1.3",
     "@welldone-software/why-did-you-render": "^8.0.1",
+    "eslint-config-airbnb": "^18.2.1",
     "jsdom": "^25.0.1",
     "vitest": "^2.1.3"
   }
