cleans up imports and removes artifacts

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,10 +2,10 @@
 
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": ".",
     "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
